--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "webpack-dev-server --progress --config src/frontend/webpack/dev.config.js",
-    "build": "webpack --config src/frontend/webpack/build.config.js",
-    "lint": "eslint --ext .js,.vue src/frontend",
-    "lint:fix": "eslint --ext .js,.vue src/frontend --fix"
+    "dev:api": "node node_modules/nodemon/bin/nodemon.js",
+    "dev:frontend": "webpack-dev-server --progress --config webpack/dev.config.js",
+    "build:frontend": "webpack --config webpack/build.config.js",
+    "lint": "eslint --ext .js,.ts,.vue src",
+    "lint:fix": "eslint --ext .js,.ts,.vue src --fix"
   },
   "author": "Riari <riari@teamteatime.net>",
   "license": "ISC",
@@ -16,18 +17,31 @@
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
     "flexboxgrid": "^6.3.1",
+    "js-cookie": "^2.2.0",
+    "jsonwebtoken": "^8.3.0",
+    "reflect-metadata": "^0.1.12",
+    "sequelize": "^4.38.0",
+    "sequelize-typescript": "^0.6.6",
+    "validatorjs": "^3.14.2",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^10.7.1",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
+    "nodemon": "^1.18.3",
+    "pg": "^7.4.3",
     "sass-loader": "^7.1.0",
     "ts-loader": "^4.4.2",
+    "ts-node": "^7.0.1",
     "typescript": "^3.0.1",
     "url-loader": "^1.0.1",
     "vue-class-component": "^6.2.0",
