--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "feather-icons": "^4.7.3",
     "flexboxgrid": "^6.3.1",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.3.0",
