--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "express-handlebars": "^3.0.0",
+    "express-mailer": "^0.3.1",
     "feather-icons": "^4.7.3",
     "flexboxgrid": "^6.3.1",
     "js-cookie": "^2.2.0",
@@ -29,6 +31,7 @@
     "validatorjs": "^3.14.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-toasted": "^1.1.24",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
