--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev:api": "node node_modules/nodemon/bin/nodemon.js",
     "dev:frontend": "webpack-dev-server --progress --config webpack/dev.config.js",
+    "orm": "ts-node node_modules\\typeorm\\cli.js",
     "build:frontend": "webpack --config webpack/build.config.js",
     "lint": "eslint --ext .js,.ts,.vue src",
     "lint:fix": "eslint --ext .js,.ts,.vue src --fix"
@@ -28,6 +29,7 @@
     "reflect-metadata": "^0.1.12",
     "sequelize": "^4.38.0",
     "sequelize-typescript": "^0.6.6",
+    "typeorm": "^0.2.7",
     "validatorjs": "^3.14.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
