--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "flexboxgrid": "^6.3.1",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.3.0",
+    "node-cache": "^4.2.0",
     "reflect-metadata": "^0.1.12",
-    "sequelize": "^4.38.0",
-    "sequelize-typescript": "^0.6.6",
     "typeorm": "^0.2.7",
     "validatorjs": "^3.14.2",
     "vue": "^2.5.17",
