--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-cache": "^4.2.0",
     "reflect-metadata": "^0.1.12",
     "truncate-html": "^1.0.1-rc.1",
+    "tui-editor": "^1.2.6",
     "typeorm": "^0.2.7",
     "validatorjs": "^3.14.2",
     "vue": "^2.5.17",
@@ -48,6 +49,7 @@
     "nodemon": "^1.18.3",
     "pg": "^7.4.3",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1",
