--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "node-cache": "^4.2.0",
     "reflect-metadata": "^0.1.12",
     "showdown": "^1.8.6",
+    "slugify": "^1.3.1",
+    "striptags": "^3.1.1",
     "truncate-html": "^1.0.1-rc.1",
     "tui-editor": "^1.2.6",
     "typeorm": "^0.2.7",
     "validatorjs": "^3.14.2",
     "vue": "^2.5.17",
     "vue-moment": "^4.0.0",
+    "vue-page-title": "^1.1.3",
+    "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vue-toasted": "^1.1.24",
