--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
+    "outDir": "./dist/",
+    "lib": ["es6", "es2017", "dom"],
+    "target": "es6",
     "module": "commonjs",
-    "target": "es2017",
+    "moduleResolution": "node",
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "sourceMap": true,
-    "outDir": "build"
+    "sourceMap": true
   },
   "exclude": [
     "node_modules"
