--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ build-frontend:
     - npm run build:frontend
   artifacts:
     paths:
+      - node_modules/
       - dist/
 
 deploy-production:
