--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 image: node:latest
 
+before_script:
+  - npm i
+
 stages:
   - build
   - deploy
@@ -8,18 +11,10 @@ cache:
   paths:
   - node_modules/
 
-install:
-  stage: build
-  script:
-    - npm i
-  artifacts:
-    paths:
-      - node_modules/
-
 build-frontend:
   stage: build
   script:
-    - ./node_modules/webpack/bin/webpack.js --config webpack/frontend/build.config.js
+    - npm run build:frontend
   artifacts:
     paths:
       - dist/
