--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,16 +2,19 @@ stages:
   - build
   - deploy
 
-cache:
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-    - node_modules/
+install:
+  image: node:latest
+  stage: build
+  script:
+    - npm i
+  artifacts:
+    paths:
+      - node_modules/
+  expire_in: 1 day
 
 build-frontend:
   image: node:latest
   stage: build
-  before_script:
-    - npm i
   script:
     - npm run build:frontend
   artifacts:
