--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ install:
   artifacts:
     paths:
       - node_modules/
-  expire_in: 1 day
+    expires_in: 1 day
 
 build-frontend:
   image: node:latest
