No concurrent jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 stages:
+  - install
   - build
   - deploy
 
-install:
+install-dependencies:
   image: node:latest
-  stage: build
+  stage: install
   script:
     - npm i
   artifacts:
