--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,5 +28,6 @@ deploy-production:
   script:
     - eval "$(ssh-agent)"
     - ssh-add <(echo "$PRODUCTION_PRIVATE_KEY")
-    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && git pull && npm i"
     - scp -P22 -r dist/* gitlab@web.arvale.world:/srv/web/dist
+    - scp -P22 -r node_modules/* gitlab@web.arvale.world:/srv/web/node_modules
+    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && git pull"
