--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express-handlebars": "^3.0.0",
     "express-mailer": "^0.3.1",
     "feather-icons": "^4.7.3",
