--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,4 @@ deploy:
   script:
     - eval "$(ssh-agent)"
     - ssh-add <(echo "$PRODUCTION_PRIVATE_KEY")
-    - scp -P22 -r dist/* gitlab@web.arvale.world:/srv/web/dist
+    - scp -P22 -r dist/* gitlab@web.arvale.world:/srv/web
