Install dependencies on deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,5 @@ deploy:
   script:
     - eval "$(ssh-agent)"
     - ssh-add <(echo "$PRODUCTION_PRIVATE_KEY")
+    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && npm i"
     - scp -P22 -r dist/* gitlab@web.arvale.world:/srv/web
