--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,5 +25,5 @@ deploy:
     - eval "$(ssh-agent)"
     - ssh-add <(echo "$PRODUCTION_PRIVATE_KEY")
     - scp -P22 {package,package-lock}.json gitlab@web.arvale.world:/srv/web
-    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && npm i && rm -rf /srv/web/frontend/*"
+    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && npm i && rm -rf frontend/*"
     - scp -P22 -r dist/* gitlab@web.arvale.world:/srv/web
