--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.3.0",
     "node-cache": "^4.2.0",
     "reflect-metadata": "^0.1.12",
+    "request": "^2.88.0",
     "showdown": "^1.8.6",
     "simplemde": "^1.11.2",
     "slugify": "^1.3.1",
