--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,6 @@ build:
   script:
     - npm i
     - npm run build:frontend
-    - npm run build:api
   artifacts:
     paths:
       - dist/
@@ -24,6 +23,5 @@ deploy:
   script:
     - eval "$(ssh-agent)"
     - ssh-add <(echo "$PRODUCTION_PRIVATE_KEY")
-    - scp -P22 {package,package-lock}.json gitlab@web.arvale.world:/srv/web
-    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && npm i && rm -rf frontend/*"
-    - scp -P22 -r dist/* gitlab@web.arvale.world:/srv/web
+    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && git pull && npm i && rm -rf dist"
+    - scp -P22 -r dist/* gitlab@web.arvale.world:/srv/web/dist
