--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,5 +23,5 @@ deploy:
   script:
     - eval "$(ssh-agent)"
     - ssh-add <(echo "$PRODUCTION_PRIVATE_KEY")
-    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && git pull && npm i && rm -rf dist"
+    - ssh -p22 gitlab@web.arvale.world "cd /srv/web && git pull && npm i && rm -rf dist/*"
     - scp -P22 -r dist/* gitlab@web.arvale.world:/srv/web/dist
